; ModuleID = '/home/carl/AnghaBench/sqlcipher/ext/lsm1/extr_lsm_sorted.c_mergeWorkerBtreeWrite.c'
source_filename = "/home/carl/AnghaBench/sqlcipher/ext/lsm1/extr_lsm_sorted.c_mergeWorkerBtreeWrite.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i32, %struct.TYPE_5__*, %struct.TYPE_7__ }
%struct.TYPE_5__ = type { i32, i32, i32 }
%struct.TYPE_7__ = type { i32, i32** }

@LSM_OK = common dso_local global i32 0, align 4
@LSM_NOMEM_BKPT = common dso_local global i32 0, align 4
@SEGMENT_BTREE_FLAG = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_6__*, i32, i64, i64, i8*, i32)* @mergeWorkerBtreeWrite to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mergeWorkerBtreeWrite(%struct.TYPE_6__* %0, i32 %1, i64 %2, i64 %3, i8* %4, i32 %5) #0 {
  %7 = alloca i32, align 4
  %8 = alloca %struct.TYPE_6__*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i64, align 8
  %11 = alloca i64, align 8
  %12 = alloca i8*, align 8
  %13 = alloca i32, align 4
  %14 = alloca %struct.TYPE_7__*, align 8
  %15 = alloca %struct.TYPE_5__*, align 8
  %16 = alloca i32, align 4
  %17 = alloca i32, align 4
  %18 = alloca i32, align 4
  %19 = alloca i32*, align 8
  %20 = alloca i32, align 4
  %21 = alloca i32, align 4
  %22 = alloca i32, align 4
  %23 = alloca i32**, align 8
  %24 = alloca i32*, align 8
  %25 = alloca i32, align 4
  store %struct.TYPE_6__* %0, %struct.TYPE_6__** %8, align 8
  store i32 %1, i32* %9, align 4
  store i64 %2, i64* %10, align 8
  store i64 %3, i64* %11, align 8
  store i8* %4, i8** %12, align 8
  store i32 %5, i32* %13, align 4
  %26 = load %struct.TYPE_6__*, %struct.TYPE_6__** %8, align 8
  %27 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %26, i32 0, i32 2
  store %struct.TYPE_7__* %27, %struct.TYPE_7__** %14, align 8
  %28 = load %struct.TYPE_6__*, %struct.TYPE_6__** %8, align 8
  %29 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %28, i32 0, i32 1
  %30 = load %struct.TYPE_5__*, %struct.TYPE_5__** %29, align 8
  store %struct.TYPE_5__* %30, %struct.TYPE_5__** %15, align 8
  %31 = load i32, i32* @LSM_OK, align 4
  store i32 %31, i32* %16, align 4
  %32 = load i32, i32* %9, align 4
  %33 = icmp eq i32 %32, 0
  %34 = zext i1 %33 to i32
  %35 = load i64, i64* %11, align 8
  %36 = icmp ne i64 %35, 0
  %37 = zext i1 %36 to i32
  %38 = icmp eq i32 %34, %37
  %39 = zext i1 %38 to i32
  %40 = call i32 @assert(i32 %39)
  store i32 0, i32* %17, align 4
  br label %41

41:                                               ; preds = %218, %6
  %42 = load i32, i32* %17, align 4
  %43 = load %struct.TYPE_7__*, %struct.TYPE_7__** %14, align 8
  %44 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %43, i32 0, i32 0
  %45 = load i32, i32* %44, align 8
  %46 = icmp sle i32 %42, %45
  br i1 %46, label %47, label %221

47:                                               ; preds = %41
  %48 = load i32, i32* %17, align 4
  %49 = load %struct.TYPE_7__*, %struct.TYPE_7__** %14, align 8
  %50 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %49, i32 0, i32 0
  %51 = load i32, i32* %50, align 8
  %52 = icmp eq i32 %48, %51
  br i1 %52, label %53, label %79

53:                                               ; preds = %47
  %54 = load %struct.TYPE_6__*, %struct.TYPE_6__** %8, align 8
  %55 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %54, i32 0, i32 1
  %56 = load %struct.TYPE_5__*, %struct.TYPE_5__** %55, align 8
  %57 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %56, i32 0, i32 2
  %58 = load i32, i32* %57, align 4
  %59 = load %struct.TYPE_7__*, %struct.TYPE_7__** %14, align 8
  %60 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %59, i32 0, i32 1
  %61 = load i32**, i32*** %60, align 8
  %62 = load %struct.TYPE_7__*, %struct.TYPE_7__** %14, align 8
  %63 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %62, i32 0, i32 0
  %64 = load i32, i32* %63, align 8
  %65 = add nsw i32 %64, 1
  %66 = sext i32 %65 to i64
  %67 = mul i64 8, %66
  %68 = trunc i64 %67 to i32
  %69 = call i64 @lsmRealloc(i32 %58, i32** %61, i32 %68)
  %70 = inttoptr i64 %69 to i32**
  store i32** %70, i32*** %23, align 8
  %71 = load i32**, i32*** %23, align 8
  %72 = icmp ne i32** %71, null
  br i1 %72, label %75, label %73

73:                                               ; preds = %53
  %74 = load i32, i32* @LSM_NOMEM_BKPT, align 4
  store i32 %74, i32* %7, align 4
  br label %317

75:                                               ; preds = %53
  %76 = load i32**, i32*** %23, align 8
  %77 = load %struct.TYPE_7__*, %struct.TYPE_7__** %14, align 8
  %78 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %77, i32 0, i32 1
  store i32** %76, i32*** %78, align 8
  br label %151

79:                                               ; preds = %47
  %80 = load %struct.TYPE_7__*, %struct.TYPE_7__** %14, align 8
  %81 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %80, i32 0, i32 1
  %82 = load i32**, i32*** %81, align 8
  %83 = load i32, i32* %17, align 4
  %84 = sext i32 %83 to i64
  %85 = getelementptr inbounds i32*, i32** %82, i64 %84
  %86 = load i32*, i32** %85, align 8
  store i32* %86, i32** %24, align 8
  %87 = load i32*, i32** %24, align 8
  %88 = call i32 @lsmFsPageWritable(i32* %87)
  %89 = call i32 @assert(i32 %88)
  %90 = load i32*, i32** %24, align 8
  %91 = call i32* @fsPageData(i32* %90, i32* %18)
  store i32* %91, i32** %19, align 8
  %92 = load i32, i32* %9, align 4
  %93 = icmp eq i32 %92, 0
  br i1 %93, label %94, label %103

94:                                               ; preds = %79
  %95 = load i64, i64* %10, align 8
  %96 = trunc i64 %95 to i32
  %97 = call i32 @lsmVarintLen32(i32 %96)
  %98 = add nsw i32 3, %97
  %99 = load i64, i64* %11, align 8
  %100 = trunc i64 %99 to i32
  %101 = call i32 @lsmVarintLen32(i32 %100)
  %102 = add nsw i32 %98, %101
  store i32 %102, i32* %22, align 4
  br label %113

103:                                              ; preds = %79
  %104 = load i64, i64* %10, align 8
  %105 = trunc i64 %104 to i32
  %106 = call i32 @lsmVarintLen32(i32 %105)
  %107 = add nsw i32 3, %106
  %108 = load i32, i32* %13, align 4
  %109 = call i32 @lsmVarintLen32(i32 %108)
  %110 = add nsw i32 %107, %109
  %111 = load i32, i32* %13, align 4
  %112 = add nsw i32 %110, %111
  store i32 %112, i32* %22, align 4
  br label %113

113:                                              ; preds = %103, %94
  %114 = load i32*, i32** %19, align 8
  %115 = load i32, i32* %18, align 4
  %116 = call i32 @pageGetNRec(i32* %114, i32 %115)
  store i32 %116, i32* %21, align 4
  %117 = load i32, i32* %18, align 4
  %118 = load i32, i32* %21, align 4
  %119 = call i32 @SEGMENT_EOF(i32 %117, i32 %118)
  %120 = load i32*, i32** %19, align 8
  %121 = load i32, i32* %18, align 4
  %122 = call i32 @mergeWorkerPageOffset(i32* %120, i32 %121)
  %123 = sub nsw i32 %119, %122
  store i32 %123, i32* %25, align 4
  %124 = load i32, i32* %22, align 4
  %125 = load i32, i32* %25, align 4
  %126 = icmp sle i32 %124, %125
  br i1 %126, label %127, label %128

127:                                              ; preds = %113
  br label %221

128:                                              ; preds = %113
  %129 = load i32*, i32** %19, align 8
  %130 = load i32, i32* %18, align 4
  %131 = call i64 @SEGMENT_POINTER_OFFSET(i32 %130)
  %132 = getelementptr inbounds i32, i32* %129, i64 %131
  %133 = load i64, i64* %10, align 8
  %134 = call i32 @lsmPutU64(i32* %132, i64 %133)
  %135 = load i32*, i32** %24, align 8
  %136 = call i64 @lsmFsPageNumber(i32* %135)
  %137 = icmp eq i64 %136, 0
  %138 = zext i1 %137 to i32
  %139 = call i32 @assert(i32 %138)
  %140 = load i32*, i32** %24, align 8
  %141 = call i32 @lsmFsPagePersist(i32* %140)
  store i32 %141, i32* %16, align 4
  %142 = load i32, i32* %16, align 4
  %143 = load i32, i32* @LSM_OK, align 4
  %144 = icmp eq i32 %142, %143
  br i1 %144, label %145, label %150

145:                                              ; preds = %128
  %146 = load i32*, i32** %24, align 8
  %147 = call i64 @lsmFsPageNumber(i32* %146)
  store i64 %147, i64* %10, align 8
  %148 = load i32*, i32** %24, align 8
  %149 = call i32 @lsmFsPageRelease(i32* %148)
  br label %150

150:                                              ; preds = %145, %128
  br label %151

151:                                              ; preds = %150, %75
  %152 = load %struct.TYPE_7__*, %struct.TYPE_7__** %14, align 8
  %153 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %152, i32 0, i32 1
  %154 = load i32**, i32*** %153, align 8
  %155 = load i32, i32* %17, align 4
  %156 = sext i32 %155 to i64
  %157 = getelementptr inbounds i32*, i32** %154, i64 %156
  store i32* null, i32** %157, align 8
  %158 = load i32, i32* %16, align 4
  %159 = load i32, i32* @LSM_OK, align 4
  %160 = icmp eq i32 %158, %159
  br i1 %160, label %161, label %178

161:                                              ; preds = %151
  %162 = load %struct.TYPE_5__*, %struct.TYPE_5__** %15, align 8
  %163 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %162, i32 0, i32 1
  %164 = load i32, i32* %163, align 4
  %165 = load %struct.TYPE_5__*, %struct.TYPE_5__** %15, align 8
  %166 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %165, i32 0, i32 0
  %167 = load i32, i32* %166, align 4
  %168 = load %struct.TYPE_6__*, %struct.TYPE_6__** %8, align 8
  %169 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %168, i32 0, i32 0
  %170 = load i32, i32* %169, align 8
  %171 = load %struct.TYPE_7__*, %struct.TYPE_7__** %14, align 8
  %172 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %171, i32 0, i32 1
  %173 = load i32**, i32*** %172, align 8
  %174 = load i32, i32* %17, align 4
  %175 = sext i32 %174 to i64
  %176 = getelementptr inbounds i32*, i32** %173, i64 %175
  %177 = call i32 @lsmFsSortedAppend(i32 %164, i32 %167, i32 %170, i32 1, i32** %176)
  store i32 %177, i32* %16, align 4
  br label %178

178:                                              ; preds = %161, %151
  %179 = load i32, i32* %16, align 4
  %180 = load i32, i32* @LSM_OK, align 4
  %181 = icmp ne i32 %179, %180
  br i1 %181, label %182, label %184

182:                                              ; preds = %178
  %183 = load i32, i32* %16, align 4
  store i32 %183, i32* %7, align 4
  br label %317

184:                                              ; preds = %178
  %185 = load %struct.TYPE_7__*, %struct.TYPE_7__** %14, align 8
  %186 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %185, i32 0, i32 1
  %187 = load i32**, i32*** %186, align 8
  %188 = load i32, i32* %17, align 4
  %189 = sext i32 %188 to i64
  %190 = getelementptr inbounds i32*, i32** %187, i64 %189
  %191 = load i32*, i32** %190, align 8
  %192 = call i32* @fsPageData(i32* %191, i32* %18)
  store i32* %192, i32** %19, align 8
  %193 = load i32*, i32** %19, align 8
  %194 = load i32, i32* %18, align 4
  %195 = call i32 @memset(i32* %193, i32 0, i32 %194)
  %196 = load i32*, i32** %19, align 8
  %197 = load i32, i32* %18, align 4
  %198 = call i64 @SEGMENT_FLAGS_OFFSET(i32 %197)
  %199 = getelementptr inbounds i32, i32* %196, i64 %198
  %200 = load i32, i32* @SEGMENT_BTREE_FLAG, align 4
  %201 = call i32 @lsmPutU16(i32* %199, i32 %200)
  %202 = load i32*, i32** %19, align 8
  %203 = load i32, i32* %18, align 4
  %204 = call i64 @SEGMENT_NRECORD_OFFSET(i32 %203)
  %205 = getelementptr inbounds i32, i32* %202, i64 %204
  %206 = call i32 @lsmPutU16(i32* %205, i32 0)
  %207 = load i32, i32* %17, align 4
  %208 = load %struct.TYPE_7__*, %struct.TYPE_7__** %14, align 8
  %209 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %208, i32 0, i32 0
  %210 = load i32, i32* %209, align 8
  %211 = icmp eq i32 %207, %210
  br i1 %211, label %212, label %217

212:                                              ; preds = %184
  %213 = load %struct.TYPE_7__*, %struct.TYPE_7__** %14, align 8
  %214 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %213, i32 0, i32 0
  %215 = load i32, i32* %214, align 8
  %216 = add nsw i32 %215, 1
  store i32 %216, i32* %214, align 8
  br label %221

217:                                              ; preds = %184
  br label %218

218:                                              ; preds = %217
  %219 = load i32, i32* %17, align 4
  %220 = add nsw i32 %219, 1
  store i32 %220, i32* %17, align 4
  br label %41

221:                                              ; preds = %212, %127, %41
  %222 = load %struct.TYPE_7__*, %struct.TYPE_7__** %14, align 8
  %223 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %222, i32 0, i32 1
  %224 = load i32**, i32*** %223, align 8
  %225 = load i32, i32* %17, align 4
  %226 = sext i32 %225 to i64
  %227 = getelementptr inbounds i32*, i32** %224, i64 %226
  %228 = load i32*, i32** %227, align 8
  %229 = call i32* @fsPageData(i32* %228, i32* %18)
  store i32* %229, i32** %19, align 8
  %230 = load i32*, i32** %19, align 8
  %231 = load i32, i32* %18, align 4
  %232 = call i32 @mergeWorkerPageOffset(i32* %230, i32 %231)
  store i32 %232, i32* %20, align 4
  %233 = load i32*, i32** %19, align 8
  %234 = load i32, i32* %18, align 4
  %235 = call i32 @pageGetNRec(i32* %233, i32 %234)
  store i32 %235, i32* %21, align 4
  %236 = load i32*, i32** %19, align 8
  %237 = load i32, i32* %18, align 4
  %238 = load i32, i32* %21, align 4
  %239 = call i64 @SEGMENT_CELLPTR_OFFSET(i32 %237, i32 %238)
  %240 = getelementptr inbounds i32, i32* %236, i64 %239
  %241 = load i32, i32* %20, align 4
  %242 = call i32 @lsmPutU16(i32* %240, i32 %241)
  %243 = load i32*, i32** %19, align 8
  %244 = load i32, i32* %18, align 4
  %245 = call i64 @SEGMENT_NRECORD_OFFSET(i32 %244)
  %246 = getelementptr inbounds i32, i32* %243, i64 %245
  %247 = load i32, i32* %21, align 4
  %248 = add nsw i32 %247, 1
  %249 = call i32 @lsmPutU16(i32* %246, i32 %248)
  %250 = load i32, i32* %9, align 4
  %251 = icmp eq i32 %250, 0
  br i1 %251, label %252, label %280

252:                                              ; preds = %221
  %253 = load i32*, i32** %19, align 8
  %254 = load i32, i32* %20, align 4
  %255 = add nsw i32 %254, 1
  store i32 %255, i32* %20, align 4
  %256 = sext i32 %254 to i64
  %257 = getelementptr inbounds i32, i32* %253, i64 %256
  store i32 0, i32* %257, align 4
  %258 = load i32*, i32** %19, align 8
  %259 = load i32, i32* %20, align 4
  %260 = sext i32 %259 to i64
  %261 = getelementptr inbounds i32, i32* %258, i64 %260
  %262 = load i64, i64* %10, align 8
  %263 = trunc i64 %262 to i32
  %264 = call i64 @lsmVarintPut32(i32* %261, i32 %263)
  %265 = load i32, i32* %20, align 4
  %266 = sext i32 %265 to i64
  %267 = add nsw i64 %266, %264
  %268 = trunc i64 %267 to i32
  store i32 %268, i32* %20, align 4
  %269 = load i32*, i32** %19, align 8
  %270 = load i32, i32* %20, align 4
  %271 = sext i32 %270 to i64
  %272 = getelementptr inbounds i32, i32* %269, i64 %271
  %273 = load i64, i64* %11, align 8
  %274 = trunc i64 %273 to i32
  %275 = call i64 @lsmVarintPut32(i32* %272, i32 %274)
  %276 = load i32, i32* %20, align 4
  %277 = sext i32 %276 to i64
  %278 = add nsw i64 %277, %275
  %279 = trunc i64 %278 to i32
  store i32 %279, i32* %20, align 4
  br label %315

280:                                              ; preds = %221
  %281 = load i32, i32* %9, align 4
  %282 = load i32*, i32** %19, align 8
  %283 = load i32, i32* %20, align 4
  %284 = add nsw i32 %283, 1
  store i32 %284, i32* %20, align 4
  %285 = sext i32 %283 to i64
  %286 = getelementptr inbounds i32, i32* %282, i64 %285
  store i32 %281, i32* %286, align 4
  %287 = load i32*, i32** %19, align 8
  %288 = load i32, i32* %20, align 4
  %289 = sext i32 %288 to i64
  %290 = getelementptr inbounds i32, i32* %287, i64 %289
  %291 = load i64, i64* %10, align 8
  %292 = trunc i64 %291 to i32
  %293 = call i64 @lsmVarintPut32(i32* %290, i32 %292)
  %294 = load i32, i32* %20, align 4
  %295 = sext i32 %294 to i64
  %296 = add nsw i64 %295, %293
  %297 = trunc i64 %296 to i32
  store i32 %297, i32* %20, align 4
  %298 = load i32*, i32** %19, align 8
  %299 = load i32, i32* %20, align 4
  %300 = sext i32 %299 to i64
  %301 = getelementptr inbounds i32, i32* %298, i64 %300
  %302 = load i32, i32* %13, align 4
  %303 = call i64 @lsmVarintPut32(i32* %301, i32 %302)
  %304 = load i32, i32* %20, align 4
  %305 = sext i32 %304 to i64
  %306 = add nsw i64 %305, %303
  %307 = trunc i64 %306 to i32
  store i32 %307, i32* %20, align 4
  %308 = load i32*, i32** %19, align 8
  %309 = load i32, i32* %20, align 4
  %310 = sext i32 %309 to i64
  %311 = getelementptr inbounds i32, i32* %308, i64 %310
  %312 = load i8*, i8** %12, align 8
  %313 = load i32, i32* %13, align 4
  %314 = call i32 @memcpy(i32* %311, i8* %312, i32 %313)
  br label %315

315:                                              ; preds = %280, %252
  %316 = load i32, i32* %16, align 4
  store i32 %316, i32* %7, align 4
  br label %317

317:                                              ; preds = %315, %182, %73
  %318 = load i32, i32* %7, align 4
  ret i32 %318
}

declare dso_local i32 @assert(i32) #1

declare dso_local i64 @lsmRealloc(i32, i32**, i32) #1

declare dso_local i32 @lsmFsPageWritable(i32*) #1

declare dso_local i32* @fsPageData(i32*, i32*) #1

declare dso_local i32 @lsmVarintLen32(i32) #1

declare dso_local i32 @pageGetNRec(i32*, i32) #1

declare dso_local i32 @SEGMENT_EOF(i32, i32) #1

declare dso_local i32 @mergeWorkerPageOffset(i32*, i32) #1

declare dso_local i32 @lsmPutU64(i32*, i64) #1

declare dso_local i64 @SEGMENT_POINTER_OFFSET(i32) #1

declare dso_local i64 @lsmFsPageNumber(i32*) #1

declare dso_local i32 @lsmFsPagePersist(i32*) #1

declare dso_local i32 @lsmFsPageRelease(i32*) #1

declare dso_local i32 @lsmFsSortedAppend(i32, i32, i32, i32, i32**) #1

declare dso_local i32 @memset(i32*, i32, i32) #1

declare dso_local i32 @lsmPutU16(i32*, i32) #1

declare dso_local i64 @SEGMENT_FLAGS_OFFSET(i32) #1

declare dso_local i64 @SEGMENT_NRECORD_OFFSET(i32) #1

declare dso_local i64 @SEGMENT_CELLPTR_OFFSET(i32, i32) #1

declare dso_local i64 @lsmVarintPut32(i32*, i32) #1

declare dso_local i32 @memcpy(i32*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
